added slides on installation and documentation

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -60,6 +60,43 @@ class: center, middle
  - With others (see Part 2)
  
 ---
+
+# .blue[Install git]
+
+.red[Try this:]  At the command line,
+
+```bash
+    git help
+```
+
+If you don't have `git` installed, see for example:
+
+ - [Installing Git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git) from the 
+   [Git Book](https://git-scm.com/).
+   
+.red[Note:] This tutorial uses git from the command line.  <br>
+On Mac OSX you also need Xcode command line tools installed.
+
+Other GUI-based tools also exist.
+
+
+---
+   
+## .blue[Documentation]
+
+ - At the command line, try for example:  `git help commit`
+ - [Git Book](https://git-scm.com/)
+ 
+<p>&nbsp;</p>
+
+## .blue[Tutorials]
+
+Many exist on the web if you search, for example:
+
+ - [From the Git Book](https://git-scm.com/docs/gittutorial)
+ - [From Software Carpentry](http://swcarpentry.github.io/git-novice/)
+ 
+---
 name: gitinit
 
 # .blue[Turn any directory into a git repository:]
