Started part2.html

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -252,7 +252,10 @@ To add a new remote:
 
 The `<url>` could be:
 
- - 
+ - another clone on the same machine
+ - a clone on a server or your desktop
+ - a repository on Github, Bitbucket, Gitlab, etc.
+
 ---
 
 # To do: (More slides needed to guide demos)
@@ -262,9 +265,9 @@ The `<url>` could be:
  - Explain difference between untracked, clean, unstaged, staged
  - Brief discussion of branches, remotes at end of Part 1?
 
-    </textarea>
 
 <!-- ### End of slides ### -->
+</textarea>
 
 
 <!--  ## this only works when connected to internet:
