--- a/slides/part1.html
+++ b/slides/part1.html
@@ -44,10 +44,14 @@ class: center, middle
 
 # Part I
 
+
 ### Tutorial for the SIAM CSE Conference, 2017
 
 http://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=61491
 
+### On Github: 
+
+https://github.com/uwescience/git-tutorials-siamcse2017
 
 ---
 
@@ -169,6 +173,13 @@ template: clone-this-repo
 
 Then open `git-tutorials-siamcse2017/slides/part1.html`<br> 
 if you want to view these slides in your browser.
+
+???
+To update:
+
+```bash
+git pull
+```
 
 ---
 # .blue[Git commit hash codes]
