add link to Git Cheat Sheet to both slide decks

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -108,6 +108,7 @@ See: http://swcarpentry.github.io/git-novice/02-setup/
 
  - At the command line, try for example:  `git help commit`
  - [Git Book](https://git-scm.com/)
+ - [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
  
 <p>&nbsp;</p>
 
