--- a/slides/part2.html
+++ b/slides/part2.html
@@ -70,7 +70,9 @@ We assume you:
   - `git checkout`
 
 
-.red[For some tips:] see [part1.html](part1.html)
+.red[For some tips, see:]
+- [part1.html](part1.html)
+- [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
 
 ---
 
