added link to conference abstract

--- a/slides/part2.html
+++ b/slides/part2.html
@@ -44,6 +44,9 @@ class: center, middle
 
 # Part 2
 
+### Tutorial for the SIAM CSE Conference, 2017
+
+http://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=61498
 
 ### On Github: 
 
