added links to gitk, atom

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -66,6 +66,29 @@ https://github.com/uwescience/git-tutorials-siamcse2017
 
  - With yourself on multiple computers (and for backup)
  - With others (see Part 2)
+
+---
+   
+## .blue[Documentation]
+
+ - At the command line, try for example:  `git help commit`
+ - [Git Book](https://git-scm.com/)
+ - [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
+   from https://education.github.com
+ 
+<p>&nbsp;</p>
+
+### .blue[Tutorials]
+
+Many exist on the web if you search, for example:
+
+ - [From the Git Book](https://git-scm.com/docs/gittutorial)
+ - From Software Carpentry: http://swcarpentry.github.io/git-novice/
+
+### .blue[Other useful tools]
+
+ - [gitk](https://git-scm.com/docs/gitk) The git repository browser
+ - [atom](https://atom.io/) Atom editor developed by Github
  
 ---
 name: install
@@ -96,30 +119,12 @@ template:install
 ```bash
     git config --global user.name "John Doe"
     git config --global user.email johndoe@example.com
-    git config --global core.editor vim
+    git config --global core.editor nano # or nano, emacs, etc.
 ```
 
 See: http://swcarpentry.github.io/git-novice/02-setup/
 
 
----
-   
-## .blue[Documentation]
-
- - At the command line, try for example:  `git help commit`
- - [Git Book](https://git-scm.com/)
- - [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
- 
-<p>&nbsp;</p>
-
-## .blue[Tutorials]
-
-Many exist on the web if you search, for example:
-
- - [From the Git Book](https://git-scm.com/docs/gittutorial)
- - From Software Carpentry: http://swcarpentry.github.io/git-novice/
-
-   We will follow this!
  
 ---
 name: gitinit
