added links to gitk, atom

--- a/slides/part2.html
+++ b/slides/part2.html
@@ -66,16 +66,18 @@ We assume you:
 
 - have Git installed
 - understand basics of working on a single branch
-- are comfortable with
-  - `git init` 
-  - `git add`
-  - `git commit`
-  - `git checkout`
+- are comfortable with basic git commands, e.g.
+  - `init, add, commit, status, log, checkout`
 
-
-.red[For some tips, see:]
+### .blue[For some tips, see:]
 - [part1.html](part1.html)
 - [Git Cheat Sheet](https://education.github.com/git-cheat-sheet-education.pdf)
+  from https://education.github.com
+
+### .blue[Other useful tools]
+
+ - [gitk](https://git-scm.com/docs/gitk) The git repository browser
+ - [atom](https://atom.io/) Atom editor developed by Github
 
 ---
 
