--- a/slides/part1.html
+++ b/slides/part1.html
@@ -119,7 +119,7 @@ template:install
 ```bash
     git config --global user.name "John Doe"
     git config --global user.email johndoe@example.com
-    git config --global core.editor nano # or nano, emacs, etc.
+    git config --global core.editor nano # or vim, emacs, etc.
 ```
 
 See: http://swcarpentry.github.io/git-novice/02-setup/
@@ -309,8 +309,10 @@ Determine if there are changes in your working directory via
 
 Now let's try making a new repository.
 
-From here we will follow:
- 
+.red[From here we will do a live demo, please follow along.]
+
+For some instructions to do this on your own, see:
+
  - http://swcarpentry.github.io/git-novice/03-create/
 
 ???
