Add link to repo for git bash prompt.

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -89,6 +89,8 @@ Many exist on the web if you search, for example:
 
  - [gitk](https://git-scm.com/docs/gitk) The git repository browser
  - [atom](https://atom.io/) Atom editor developed by Github
+ - [git bash prompt](https://github.com/magicmonty/bash-git-prompt) Git information on your bash prompt
+   - Just do: `brew install bash-git-prompt`
  
 ---
 name: install
